--- a/config/resources.yaml
+++ b/config/resources.yaml
@@ -1,5 +1,5 @@
 fastq_to_mergedbam:
-  partition: fast
+  partition: long
   memory: 128000
   tasks: 1
   cpu_tasks: 16
@@ -34,7 +34,7 @@ stats_mapping:
   jobname: stats_mapping
 
 variant_calling_gvcf:
-  partition: fast
+  partition: long
   memory: 128000
   tasks: 1
   cpu_tasks: 4
