--- a/config/resources.yaml
+++ b/config/resources.yaml
@@ -73,37 +73,39 @@ remove_rep_regions:
   memory: 128000
   tasks: 1
   cpu_tasks: 4
-  jobname: remove_rep_regionsmerge_gvcfs:
+  jobname: remove_rep_regions
+  
+merge_gvcfs:
   partition: long
-  memory: 2000000
+  memory: 1000000
   tasks: 1
   cpu_tasks: 8
   jobname: merge_gvcfs
 
 gvcf_to_vcf:
   partition: long
-  memory: 2000000
+  memory: 1000000
   tasks: 1
   cpu_tasks: 8
   jobname: gvcf_to_vcf
 
 add_filter_vcf:
   partition: long
-  memory: 2000000
+  memory: 1000000
   tasks: 1
   cpu_tasks: 8
   jobname: add_filter_vcf
 
 filter_vcf:
   partition: long
-  memory: 2000000
+  memory: 1000000
   tasks: 1
   cpu_tasks: 8
   jobname: filter_vcf
 
 remove_rep_regions:
   partition: long
-  memory: 2000000
+  memory: 1000000
   tasks: 1
   cpu_tasks: 4
   jobname: remove_rep_regions
